--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,106 @@
-/* #root {
-  max-width: 1280px;
+*::before, *, *::after {
+  box-sizing: border-box;
+}
+
+#root {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin: 0 auto;
+  font-size: calc(10pt + 1.3vmin);
+  text-align: center;
   padding: 2rem;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardsContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 25px;
+}
+
+.cards {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 7px;
+  padding: 2vh 3vw;
+  background-color: #33276c;
+  border: 3px solid #6253ad;
+  border-radius: 10px;
+  text-transform: uppercase;
+  text-align: center;
+  cursor: default;
+}
+
+.cardData {
+  margin: 1vh;
+  font-size: 1em;
+  color: #ffffff;
+  font-weight: 600;
+}
+
+.searchContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+#searchBarLabel {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#csvSearchBar {
+  width: 30%;
+  margin: 5px auto;
+  font-size: 1em;
+  border: 2px solid;
+  transition-duration: 200ms;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#csvSearchBar:focus {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.fileContainer {
+  display: flex;
+  flex-direction: column;
+  max-width: fit-content;
+  margin: 10px 0;
 }
 
-.card {
-  padding: 2em;
+input[type="file"] {
+  display: none;
 }
 
-.read-the-docs {
-  color: #888;
-} */
+#inputFile {
+  display: inline-block;
+  margin: 1vw 2vw;
+  padding: 0.4em 0.3em;
+  font-weight: 600;
+  background-color: #60acd8;
+  border: 4px solid #213f70;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.btn {
+  width: 70%;
+  margin: 5px auto;
+  padding: 2px 0;
+  border: 3px solid #60acd8;
+  background-color: #213f70;
+  color: #ffff;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.btn:disabled {
+  display: none;
+}
